[workspace]
resolver = "2"

members = [
    "examples/study",
    "examples/algorithm",
    "pkg/util",
    "pkg/core",
    "pkg/dns/name",
    "pkg/dns",
    "pkg/error",
    "cmd"
]

# Debug symbols end up chewing up several GB of disk space, so better to just
# disable them.
[profile.dev]
debug = false

[profile.test]
debug = false

[profile.release]
lto = true