[workspace]
resolver = "2"

members = [
    "examples/study",
    "examples/algorithm",
    "examples/simple_proc_macro",
    "examples/heapsize/heapsize",
    "examples/heapsize/heapsize_derive",
    "pkg/util",
    "pkg/core",
    "pkg/dns/name",
    "pkg/errno",
    "pkg/dns",
    "pkg/error",
    "cmd"
]

# Debug symbols end up chewing up several GB of disk space, so better to just
# disable them.
[profile.dev]
debug = false

[profile.test]
debug = false

[profile.release]
lto = true