[workspace]
resolver = "2"

members = [
    "examples/basics",
    "examples/algorithm",
    "examples/macros/simple_proc_macro",
    "examples/macros/heapsize/heapsize",
    "examples/macros/heapsize/heapsize_derive",
    "examples/macros/lazy-static/lazy-static",
    "examples/macros/plugin_demo",
    "examples/nio/smol",
    "pkg/util",
    "pkg/core",
    "pkg/dns/name",
    "pkg/errno",
    "pkg/dns",
    "pkg/error",
    "cmd"
]

# Debug symbols end up chewing up several GB of disk space, so better to just
# disable them.
[profile.dev]
debug = false

[profile.test]
debug = false

[profile.release]
lto = true