[package]
name = "proxies"
version = "0.1.0"
edition = "2021"

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drain = { version = "0.1", features = ["retain"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false }
num_cpus = { version = "1", optional = true }
tracing = "0.1"

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = { version = "0.5" }
