[workspace]
resolver = "2"

members = [
    "basics",
    "algorithm",
    "macros/simple_proc_macro",
    "macros/heapsize/heapsize",
    "macros/heapsize/heapsize_derive",
    "macros/lazy-static/lazy-static",
    "macros/plugin_demo",
    "book/asynces",
    "book/mem",
    "nio/smol",
    "web/axum"
]
