[package]
name = "proxies-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-atomic = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
futures = "0.3.5"
