[package]
name = "proxies-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
proxies-dns-name = { path = "./name" }
proxies-error = { path = "../error" }
thiserror = "1"
tracing = "0.1"
trust-dns-resolver = "0.21.2"
tokio = { version = "1", features = ["rt", "sync", "time"] }