[package]
name = "smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "1.2"
futures-io = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
once_cell = "1.15"
piper = "0.1.3"
socket2 = "0.4"
slab = "0.4.2"

[target.'cfg(linux)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
wepoll-binding = "3.0.0"